--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/HomeFragment">
+    app:startDestination="@id/detailRecipeFragment">
 
     <fragment
         android:id="@+id/HomeFragment"
@@ -25,4 +25,8 @@
             android:id="@+id/action_SecondFragment_to_FirstFragment"
             app:destination="@id/HomeFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/detailRecipeFragment"
+        android:name="com.example.trabajo_finalt3.ui.fragments.detail.DetailRecipeFragment"
+        android:label="DetailRecipeFragment" />
 </navigation>
