--- a/app/src/main/res/layout/fragment_buscador_ingredientes.xml
+++ b/app/src/main/res/layout/fragment_buscador_ingredientes.xml
@@ -35,7 +35,7 @@
             android:layout_marginTop="16dp"
             app:defaultQueryHint="Search Ingredients"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
