--- a/app/src/main/res/layout/modal_bottom_sheet.xml
+++ b/app/src/main/res/layout/modal_bottom_sheet.xml
@@ -1,102 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <ImageView
+        android:id="@+id/IVshape"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/modal_shape" />
+
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/TVform"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="35dp"
-        android:fontFamily="@font/lexend_semibold"
+        android:fontFamily="@font/alata"
         android:text="New Item"
         android:textColor="#2BCB8A"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout2"
+        android:id="@+id/styleInputItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
-        android:textColorHint="#2BCB8A"
-        app:boxStrokeColor="#2BCB8A"
+        android:backgroundTint="?attr/colorPrimary"
+        android:textColorHint="@color/green"
+        app:boxBackgroundColor="@color/white"
         app:hintTextColor="@color/green"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2">
+        app:layout_constraintTop_toBottomOf="@+id/TVform">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/inputItem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/alata"
             android:hint="Food item"
             android:inputType="text"
-            android:textColorHint="#44779E"
-            android:textSize="16sp" />
+            android:textColor="@color/green"
+            android:textColorHint="@color/green" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout3"
+        android:id="@+id/styleInputQuantity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
+        android:backgroundTint="?attr/colorPrimary"
         android:textColorHint="@color/green"
+        app:boxBackgroundColor="@color/white"
         app:hintTextColor="@color/green"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">
+        app:layout_constraintTop_toBottomOf="@+id/styleInputItem">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/inputQuantity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/alata"
             android:hint="Quantity (optional)"
             android:inputType="text"
-            android:textColorHint="#2BCB8A" />
+            android:textColor="@color/green"
+            android:textColorHint="@color/green" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout"
+        android:id="@+id/styleInputList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
+        android:backgroundTint="?attr/colorPrimary"
         android:textColorHint="@color/green"
+        app:boxBackgroundColor="@color/white"
         app:hintTextColor="@color/green"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">
+        app:layout_constraintTop_toBottomOf="@+id/styleInputQuantity">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/inputList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Aisle (optional)"
-            android:inputType="text" />
+            android:fontFamily="@font/alata"
+            android:hint="List (optional)"
+            android:inputType="text"
+            android:textColor="@color/green"
+            android:textColorHint="@color/green" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton2"
+        android:id="@+id/buttonAddItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="20dp"
         android:clickable="true"
-        app:backgroundTint="#B3A8F3"
-        android:tint="#725DEC"
+        android:tint="@color/darkPurple"
+        app:backgroundTint="@color/purple"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+        app:layout_constraintTop_toBottomOf="@+id/styleInputList"
         app:srcCompat="@android:drawable/ic_menu_send" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
+
