--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -8,7 +8,7 @@
         android:title="Home"
         app:showAsAction="always" />
     <item
-        android:id="@+id/buscadorIngredientes"
+        android:id="@+id/tabLayoutBuscador"
         android:icon="@drawable/baseline_search_24"
         android:title="Search"
         app:showAsAction="ifRoom" />
