--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,34 +13,34 @@
 
         <action
             android:id="@+id/action_HomeFragment_to_firstFragment"
-            app:destination="@id/firstFragment" />
-        <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/ShoppingListFragment" />
+            app:destination="@id/firstFragment"
+            app:popUpTo="@id/HomeFragment"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_HomeFragment_to_tabLayoutBuscador"
-            app:destination="@id/tabLayoutBuscador" />
+            app:destination="@id/tabLayoutBuscador"
+            app:popUpTo="@id/HomeFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_HomeFragment_to_ShoppingListFragment"
+            app:destination="@id/ShoppingListFragment"
+            app:popUpTo="@id/HomeFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/firstFragment"
         android:name="com.example.trabajo_final_t3.ui.fragments.listRecipe.ListRecipesFragment"
         android:label="ListRecipe"
         tools:layout="@layout/fragment_listado">
-
         <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/HomeFragment" />
+            android:id="@+id/action_firstFragment_to_detailRecipeFragment"
+            app:destination="@id/detailRecipeFragment" />
     </fragment>
     <fragment
         android:id="@+id/ShoppingListFragment"
-        android:name="com.example.trabajo_finalt3.ui.ShoppingListFragment"
+        android:name="com.example.trabajo_final_t3.ui.fragments.shoppingList.ShoppingListFragment"
         android:label="Shopping list"
-        tools:layout="@layout/fragment_shopping_list">
-
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/HomeFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_shopping_list"/>
     <fragment
         android:id="@+id/detailRecipeFragment"
         android:name="com.example.trabajo_final_t3.ui.fragments.detail.DetailRecipeFragment"
@@ -50,7 +50,15 @@
         android:name="com.example.trabajo_final_t3.ui.fragments.search.TabLayoutBuscador"
         android:label="TabLayoutBuscador" >
         <action
-            android:id="@+id/action_tabLayoutBuscador_to_firstFragment"
-            app:destination="@id/firstFragment" />
+            android:id="@+id/action_tabLayoutBuscador_to_listRecipesSearch"
+            app:destination="@id/listRecipesSearch" />
+    </fragment>
+    <fragment
+        android:id="@+id/listRecipesSearch"
+        android:name="com.example.trabajo_final_t3.ui.fragments.listRecipe.ListRecipesSearch"
+        android:label="ListRecipesSearch" >
+        <action
+            android:id="@+id/action_listRecipesSearch_to_detailRecipeFragment"
+            app:destination="@id/detailRecipeFragment" />
     </fragment>
 </navigation>
