--- a/app/src/main/res/layout/fragment_listado.xml
+++ b/app/src/main/res/layout/fragment_listado.xml
@@ -35,7 +35,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:clickable="true"
-        android:src="@android:drawable/arrow_up_float"
+        android:src="@drawable/baseline_arrow_upward_24"
         app:backgroundTint="#B3A8F3" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
